@@ -956,6 +956,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12562. Make hadoop dockerfile usable by Yetus.
     (Allen Wittenauer via wheat9)
 
+    HADOOP-12568. Update core-default.xml to describe posixGroups support.
+    (Wei-Chiu Chuang via aajisaka)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
